--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -7,51 +7,101 @@
           class="h-5 w-5"
           fill="none"
           viewBox="0 0 24 24"
-          stroke="currentColor">
+          stroke="currentColor"
+        >
           <path
             stroke-linecap="round"
             stroke-linejoin="round"
             stroke-width="2"
-            d="M4 6h16M4 12h8m-8 6h16" />
+            d="M4 6h16M4 12h8m-8 6h16"
+          />
         </svg>
       </div>
       <ul
         tabindex="0"
-        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-        <li><a>Item 1</a></li>
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+      >
         <li>
-          <a>Language</a>
-          <ul class="p-2">
-            <li><a>Submenu 1</a></li>
-            <li><a>Submenu 2</a></li>
-          </ul>
+          <a routerLink="home">
+            {{
+              languageService.currentLanguageComputed() === "es"
+                ? navbarText.home.es
+                : navbarText.home.en
+            }}
+          </a>
         </li>
-        <li><a>Item 3</a></li>
+        <li>
+          <a routerLink="who-we-are">
+            {{
+              languageService.currentLanguageComputed() === "es"
+                ? navbarText.who.es
+                : navbarText.who.en
+            }}
+          </a>
+        </li>
+        <li>
+          <a routerLink="about-us">
+            {{
+              languageService.currentLanguageComputed() === "es"
+                ? navbarText.about.es
+                : navbarText.about.en
+            }}
+          </a>
+        </li>
       </ul>
     </div>
-        <img src="../../../assets/images/logo-bg-removed.png" width="150" height="150" alt="ii" class="mt-4">
-
+    <a routerLink="home">
+      <img
+        src="../../../assets/images/logo-bg-removed.png"
+        width="150"
+        height="150"
+        alt="ii"
+        class="mt-4"
+      />
+    </a>
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1">
-      <li><a>Item 1</a></li>
       <li>
-        <details>
-          <summary>Language</summary>
-          <ul class="p-2">
-            <li><a (click)="setLanguage('es')">Español</a></li>
-            <li><a (click)="setLanguage('en')">English</a></li>
-          </ul>
-        </details>
+        <a routerLink="home">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? navbarText.home.es
+              : navbarText.home.en
+          }}
+        </a>
       </li>
-      <li><a>Item 3</a></li>
+      <li>
+        <a routerLink="who-we-are">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? navbarText.who.es
+              : navbarText.who.en
+          }}
+        </a>
+      </li>
+      <li>
+        <a routerLink="about-us">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? navbarText.about.es
+              : navbarText.about.en
+          }}
+        </a>
+      </li>
     </ul>
   </div>
   <div class="navbar-end">
     <ul class="menu menu-horizontal px-1">
       <li>
         <details>
-          <summary>Language</summary>
+          <summary>
+            {{
+              languageService.currentLanguageComputed() === "es"
+                ? navbarText.lang.es
+                : navbarText.lang.en
+            }}
+          </summary>
           <ul class="p-2">
             <li><a (click)="setLanguage('es')">Español</a></li>
             <li><a (click)="setLanguage('en')">English</a></li>
@@ -59,6 +109,5 @@
         </details>
       </li>
     </ul>
-    
   </div>
 </div>
