--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -4,7 +4,7 @@
     <div class="max-w-md">
       <h1 class="mb-5 text-5xl font-bold">
         {{
-          languageService.currentLanguageComputed() === 'es' 
+          languageService.currentLanguageComputed() === "es"
             ? testText.test.es
             : testText.test.en
         }}
