--- a/src/app/components/insurance-card/insurance-card.component.html
+++ b/src/app/components/insurance-card/insurance-card.component.html
@@ -1,15 +1,12 @@
-<div class="card glass w-96">
+<div class="card glass w-96 max-h-[500px]">
   <figure>
-    <img
-      src="../../../assets/images/beam-registration-of-medical-insurance.gif"
-      alt="car!"
-    />
+    <img [src]="image" [alt]="title" />
   </figure>
   <div class="card-body">
-    <h2 class="card-title">Life hack</h2>
-    <p>How to park your car at your garage?</p>
+    <h2 class="card-title">{{ title }}</h2>
+    <p>{{ description }}</p>
     <div class="card-actions justify-end">
-      <button class="btn btn-primary">Learn now!</button>
+      <button class="btn btn-primary">Obtener</button>
     </div>
   </div>
 </div>
