--- a/src/app/components/insurance-card/insurance-card.component.html
+++ b/src/app/components/insurance-card/insurance-card.component.html
@@ -6,7 +6,123 @@
     <h2 class="card-title">{{ title }}</h2>
     <p>{{ description }}</p>
     <div class="card-actions justify-end">
-      <button class="btn btn-primary">Obtener</button>
+      <button class="btn btn-primary" onclick="modal.showModal()">
+        Obtener
+      </button>
     </div>
   </div>
 </div>
+
+<!-- Modal -->
+<dialog id="modal" class="modal">
+  <div class="modal-box">
+    <form method="dialog">
+      <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">
+        ✕
+      </button>
+    </form>
+
+    <!-- Content section -->
+    <div class="w-full flex flex-col items-center justify-center mt-4">
+      <h2>Información Personal</h2>
+
+      <form class="mt-2">
+        <div class="form-group">
+          <label class="form-control w-full max-w-xs">
+            <div class="label">
+              <span class="label-text">Código Postal</span>
+            </div>
+            <input
+              type="text"
+              placeholder="Type here"
+              class="input input-bordered w-full max-w-xs"
+            />
+          </label>
+        </div>
+
+        <div class="form-group">
+          <label class="form-control w-full max-w-xs">
+            <div class="label">
+              <span class="label-text">Nombre completo</span>
+            </div>
+            <input
+              type="text"
+              placeholder="Type here"
+              class="input input-bordered w-full max-w-xs"
+            />
+          </label>
+        </div>
+
+        <div class="form-group">
+          <label class="form-control w-full max-w-xs">
+            <div class="label">
+              <span class="label-text">Email</span>
+            </div>
+            <input
+              type="email"
+              placeholder="Type here"
+              class="input input-bordered w-full max-w-xs"
+            />
+          </label>
+        </div>
+
+        <div class="form-group">
+          <label class="form-control w-full max-w-xs">
+            <div class="label">
+              <span class="label-text">Teléfono</span>
+            </div>
+            <input
+              type="text"
+              placeholder="Type here"
+              class="input input-bordered w-full max-w-xs"
+            />
+          </label>
+        </div>
+
+        <div class="form-group">
+          <label class="form-control w-full max-w-xs">
+            <div class="label">
+              <span class="label-text">Género</span>
+            </div>
+
+            <select class="select select-bordered w-full max-w-xs">
+              <option disabled selected>Seleccione su género</option>
+              <option>Masculino</option>
+              <option>Femenino</option>
+            </select>
+          </label>
+        </div>
+
+        <div class="form-group">
+          <label class="form-control w-full max-w-xs">
+            <div class="label">
+              <span class="label-text">Fecha de nacimiento</span>
+            </div>
+            <input
+              type="date"
+              placeholder="Type here"
+              class="input input-bordered w-full max-w-xs"
+            />
+          </label>
+        </div>
+      </form>
+    </div>
+
+    <div class="modal-action">
+      <form method="dialog">
+        <button
+          class="btn btn-primary mr-2"
+          (click)="navigateToExternalWebsite()"
+        >
+          Submit
+        </button>
+        <button class="btn btn-secondary">Close</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Hidden form to close the modal when click outside -->
+  <form method="dialog" class="modal-backdrop">
+    <button>close</button>
+  </form>
+</dialog>
