--- a/src/app/components/insurance-card/insurance-card.component.html
+++ b/src/app/components/insurance-card/insurance-card.component.html
@@ -35,6 +35,8 @@
             <input
               type="text"
               placeholder="Type here"
+              name="zip-code"
+              [(ngModel)]="zipCode"
               class="input input-bordered w-full max-w-xs"
             />
           </label>
@@ -47,7 +49,9 @@
             </div>
             <input
               type="text"
+              name="full-name"
               placeholder="Type here"
+              [(ngModel)]="fullName"
               class="input input-bordered w-full max-w-xs"
             />
           </label>
@@ -60,6 +64,8 @@
             </div>
             <input
               type="email"
+              name="email"
+              [(ngModel)]="email"
               placeholder="Type here"
               class="input input-bordered w-full max-w-xs"
             />
@@ -73,6 +79,8 @@
             </div>
             <input
               type="text"
+              name="phone"
+              [(ngModel)]="phone"
               placeholder="Type here"
               class="input input-bordered w-full max-w-xs"
             />
@@ -85,7 +93,11 @@
               <span class="label-text">Género</span>
             </div>
 
-            <select class="select select-bordered w-full max-w-xs">
+            <select
+              class="select select-bordered w-full max-w-xs"
+              name="gender"
+              [(ngModel)]="gender"
+            >
               <option disabled selected>Seleccione su género</option>
               <option>Masculino</option>
               <option>Femenino</option>
@@ -100,7 +112,9 @@
             </div>
             <input
               type="date"
+              name="birth-date"
               placeholder="Type here"
+              [(ngModel)]="birthDate"
               class="input input-bordered w-full max-w-xs"
             />
           </label>
