--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,13 @@
 <app-hero />
 
+<!-- class="w-[80%] grid grid-cols-[repeat(auto-fit,_16.66666%)] m-auto gap-5 mt-5 place-items-center border" -->
 <div
-  class="w-[80%] grid grid-cols-[repeat(auto-fit,_16.66666%)] justify-center m-auto gap-5 mt-5"
+  class="w-[80%] m-auto flex flex-wrap place-items-center gap-2 mt-5 cards-container"
 >
   @for (item of cardItems; track $index) {
-  <div class="w-full col-span-2 justify-center justify-self-center mx-auto">
+  <div
+    class="card flex flex-row justify-center justify-self-center mx-auto mt-3"
+  >
     <app-insurance-card
       [title]="
         languageService.currentLanguageComputed() === 'es'
