--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -3,16 +3,16 @@
   <div class="hero-content text-neutral-content text-center">
     <div class="max-w-md">
       <h1 class="mb-5 text-5xl font-bold">
-        {{
-          languageService.currentLanguageComputed() === "es"
-            ? testText.test.es
-            : testText.test.en
-        }}
+        <!-- <span class="black-font">Iserns</span> -->
+        <span>Iserns</span>
+        <span class="yellow-font"> Insurance</span>
       </h1>
       <p class="mb-5">
-        Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-        excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a
-        id nisi.
+        {{
+          languageService.currentLanguageComputed() === "es"
+            ? heroText.slogan.es
+            : heroText.slogan.en
+        }}
       </p>
       <button class="btn btn-primary">Get Started</button>
     </div>
