--- a/src/app/pages/who-we-are/who-we-are.component.html
+++ b/src/app/pages/who-we-are/who-we-are.component.html
@@ -1,1 +1,34 @@
-<p>who-we-are works!</p>,
+<div class="hero bg-base-200 min-h-screen">
+  <div class="hero-content flex-col lg:flex-row">
+    <img
+      src="../../../assets/images/ii-instagram.png"
+      width="750px"
+      class="max-w-sm rounded-lg shadow-2xl"
+    />
+    <div>
+      <h1 class="text-5xl font-bold">
+        <span class="yellow-font">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? text.titleInYellow.es
+              : text.titleInYellow.en
+          }}
+        </span>
+        <br />
+        <span class="black-font">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? text.titleInBlack.es
+              : text.titleInBlack.en
+          }}
+        </span>
+      </h1>
+      <p class="py-6">
+        Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
+        excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a
+        id nisi.
+      </p>
+      <button class="btn btn-primary">Get Started</button>
+    </div>
+  </div>
+</div>
