--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
+.black-font {
+    color: #010101
+}
+
+.yellow-font {
+    color: #f6cc27;
+}
