--- a/src/app/components/enroll-steps/enroll-steps.component.css
+++ b/src/app/components/enroll-steps/enroll-steps.component.css
@@ -1,3 +1,8 @@
-:host {
-  display: block;
+.step {
+  transition: .3s ease-in;
+}
+
+.steps-subtitle {
+    font-size: 1.8rem;
+    font-weight: 500;
 }
