--- a/src/app/components/enroll-steps/enroll-steps.component.html
+++ b/src/app/components/enroll-steps/enroll-steps.component.html
@@ -1,1 +1,124 @@
-<p>enroll-steps works!</p>,
+<div class="w-full flex flex-col items-center justify-center mt-[7rem]">
+  <h1 class="steps-subtitle text-primary">
+    {{
+      languageService.currentLanguageComputed() === "es"
+        ? enrollStepsText.title.es
+        : enrollStepsText.title.en
+    }}
+  </h1>
+
+  <ul
+    class="timeline timeline-snap-icon max-md:timeline-compact timeline-vertical"
+  >
+    <li>
+      <div class="timeline-middle">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+          class="h-5 w-5 text-primary"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </div>
+      <div class="timeline-start mb-10 md:text-end">
+        <time class="font-mono italic">
+          {{
+            languageService.currentLanguageComputed() === "es" ? "Paso" : "Step"
+          }}
+          1:</time
+        >
+        <div class="text-lg font-black">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? enrollStepsText.step1.es
+              : enrollStepsText.step1.en
+          }}
+        </div>
+        <img src="../../../assets/images/tell-us-about-yourself.gif" alt="" />
+      </div>
+      <hr class="bg-primary" />
+    </li>
+    <li>
+      <hr class="bg-primary" />
+      <div class="timeline-middle">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+          class="h-5 w-5"
+          [ngClass]="{ 'text-primary': currentActiveStep() >= 2 }"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </div>
+      <div class="timeline-end mb-10">
+        <time class="font-mono italic">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? "Paso"
+              : "Step"
+          }}2</time
+        >
+        <div class="text-lg font-black">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? enrollStepsText.step2.es
+              : enrollStepsText.step2.en
+          }}
+        </div>
+        <img
+          src="../../../assets/images/3d-techny-signed-health-insurance-policy-on-clipboard.gif"
+          alt=""
+        />
+      </div>
+      <hr [ngClass]="{ 'bg-primary': currentActiveStep() >= 2 }" />
+    </li>
+    <li>
+      <hr [ngClass]="{ 'bg-primary': currentActiveStep() >= 2 }" />
+      <div class="timeline-middle">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+          class="h-5 w-5 text-primary"
+          [ngClass]="{ 'text-primary': currentActiveStep() === 3 }"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </div>
+      <div class="timeline-start mb-10 md:text-end">
+        <time class="font-mono italic">
+          {{
+            languageService.currentLanguageComputed() === "es" ? "Paso" : "Step"
+          }}
+          3</time
+        >
+        <div class="text-lg font-black">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? enrollStepsText.step3.es
+              : enrollStepsText.step3.en
+          }}
+        </div>
+        <img
+          src="../../../assets/images/bubble-gum-financial-growth-line-graph.gif"
+          alt=""
+        />
+      </div>
+      <hr [ngClass]="{ 'bg-primary': currentActiveStep() === 3 }" />
+    </li>
+  </ul>
+</div>
