--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -2,12 +2,12 @@
   <div class="hero-overlay bg-opacity-60"></div>
   <div class="hero-content text-neutral-content text-center">
     <div class="max-w-md">
-      <h1 class="mb-5 text-5xl font-bold">
+      <h1 class="mb-5 text-5xl font-bold main-title-font-size">
         <!-- <span class="black-font">Iserns</span> -->
         <span>Iserns</span>
         <span class="yellow-font"> Insurance</span>
       </h1>
-      <p class="mb-5">
+      <p class="mb-5 subtitles-font-size">
         {{
           languageService.currentLanguageComputed() === "es"
             ? heroText.slogan.es
