--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -62,8 +62,8 @@
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1">
-      <li>
-        <a routerLink="home">
+      <li class="nav-titles">
+        <a routerLink="home nav-titles">
           {{
             languageService.currentLanguageComputed() === "es"
               ? navbarText.home.es
