--- a/src/app/components/insurance-card/insurance-card.component.css
+++ b/src/app/components/insurance-card/insurance-card.component.css
@@ -5,3 +5,11 @@
 .form-group {
   margin-top: .35rem;
 }
+
+.card {
+  transition: .3s ease-in;
+  &:hover {
+    transform: scale(1.03);
+    opacity: .85;
+  }
+}
