--- a/src/app/components/enroll-steps/enroll-steps.component.html
+++ b/src/app/components/enroll-steps/enroll-steps.component.html
@@ -8,7 +8,7 @@
   </h1>
 
   <ul
-    class="timeline timeline-snap-icon max-md:timeline-compact timeline-vertical"
+    class="timeline timeline-snap-icon max-md:timeline-compact timeline-vertical mt-[2rem]"
   >
     <li>
       <div class="timeline-middle">
