--- a/src/app/components/enroll-steps/enroll-steps.component.html
+++ b/src/app/components/enroll-steps/enroll-steps.component.html
@@ -1,5 +1,5 @@
 <div class="w-full flex flex-col items-center justify-center mt-[7rem]">
-  <h1 class="steps-subtitle text-primary">
+  <h1 class="secondary-title text-primary">
     {{
       languageService.currentLanguageComputed() === "es"
         ? enrollStepsText.title.es
