--- a/src/app/components/about-medicare/about-medicare.component.html
+++ b/src/app/components/about-medicare/about-medicare.component.html
@@ -1,4 +1,64 @@
+<div class="mt-3">
+  <h3 class="about-subtitles">
+    {{
+      languageService.currentLanguageComputed() === "es"
+        ? medicareText.content1Title.es
+        : medicareText.content1Title.en
+    }}
+  </h3>
+  <h4>
+    {{
+      languageService.currentLanguageComputed() === "es"
+        ? medicareText.content1Subtitle.es
+        : medicareText.content1Subtitle.en
+    }}
+  </h4>
+
+  <ol class="list-decimal list-inside mt-1">
+    @for (content of medicareText.content1OrderList; track $index) {
+    <li>
+      <span class="font-bold">
+        {{
+          languageService.currentLanguageComputed() === "es"
+            ? content.title.es
+            : content.title.en
+        }}
+      </span>
+
+      <ul class="list-disc ml-4">
+        @for (element of content.elements; track $index) {
+        <li>
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? element.es
+              : element.en
+          }}
+        </li>
+        }
+      </ul>
+    </li>
+    }
+  </ol>
+</div>
+
 <app-about-description-list
   [title]="medicareText.content2Title"
   [list]="medicareText.content2OrderList"
+  [isOrdered]="true"
+/>
+
+<app-about-description-list
+  [title]="medicareText.content3Title"
+  [list]="medicareText.content3OrderList"
+  [isOrdered]="true"
+/>
+
+<app-about-description-list
+  [title]="medicareText.content4Title"
+  [list]="medicareText.content4UnorderList"
+/>
+
+<app-about-description-list
+  [title]="medicareText.content5Title"
+  [list]="medicareText.content5UnorderList"
 />
