--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,31 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 
 .black-font {
-    color: #010101
+  color: #010101;
 }
 
 .yellow-font {
-    color: #f6cc27;
+  color: #f6cc27;
 }
 
 .main-title-font-size {
-    font-size: 3.5rem;
+  font-size: 3.5rem;
 }
 
 .subtitles-font-size {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
+}
+
+.secondary-title {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+.about-subtitles {
+  font-size: 1.3rem;
+  font-weight: 500;
 }
 
 .nav-titles {
-    font-size: 1.2rem;
-    transition: .3s ease-in;
+  font-size: 1.2rem;
+  transition: 0.3s ease-in;
 
-    &:hover {
-        text-decoration: underline;
-        transform: scale(1.1);
-        opacity: .7;
-    }
+  &:hover {
+    text-decoration: underline;
+    transform: scale(1.1);
+    opacity: 0.7;
+  }
 }
