--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -50,8 +50,9 @@
         </li>
       </ul>
     </div>
-    <a routerLink="home">
+    <a routerLink="home" class="m-hover">
       <img
+        class="m-hover"
         src="../../../assets/images/logo-bg-removed.png"
         width="150"
         height="150"
@@ -94,7 +95,7 @@
   <div class="navbar-end">
     <ul class="menu menu-horizontal px-1">
       <li>
-        <details class="w-[160px]">
+        <details class="w-[160px] m-hover">
           <summary>
             {{
               languageService.currentLanguageComputed() === "es"
