--- a/src/app/components/enroll-steps/enroll-steps.component.html
+++ b/src/app/components/enroll-steps/enroll-steps.component.html
@@ -50,9 +50,9 @@
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 20 20"
           fill="currentColor"
-          class="h-5 w-5"
-          [ngClass]="{ 'text-primary': currentActiveStep() >= 2 }"
+          class="h-5 w-5 text-primary"
         >
+          <!-- [ngClass]="{ 'text-primary': currentActiveStep() >= 2 }" -->
           <path
             fill-rule="evenodd"
             d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
@@ -80,18 +80,21 @@
           alt=""
         />
       </div>
-      <hr [ngClass]="{ 'bg-primary': currentActiveStep() >= 2 }" />
+      <!-- <hr [ngClass]="{ 'bg-primary': currentActiveStep() >= 2 }" /> -->
+      <hr class="bg-primary" />
     </li>
     <li>
-      <hr [ngClass]="{ 'bg-primary': currentActiveStep() >= 2 }" />
+      <!-- <hr [ngClass]="{ 'bg-primary': currentActiveStep() >= 2 }" /> -->
+      <hr class="bg-primary" />
+
       <div class="timeline-middle">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 20 20"
           fill="currentColor"
           class="h-5 w-5 text-primary"
-          [ngClass]="{ 'text-primary': currentActiveStep() === 3 }"
         >
+          <!-- [ngClass]="{ 'text-primary': currentActiveStep() === 3 }" -->
           <path
             fill-rule="evenodd"
             d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
@@ -118,7 +121,9 @@
           alt=""
         />
       </div>
-      <hr [ngClass]="{ 'bg-primary': currentActiveStep() === 3 }" />
+      <hr class="bg-primary" />
+
+      <!-- <hr [ngClass]="{ 'bg-primary': currentActiveStep() === 3 }" /> -->
     </li>
   </ul>
 </div>
