--- a/src/app/components/insurance-card/insurance-card.component.html
+++ b/src/app/components/insurance-card/insurance-card.component.html
@@ -34,7 +34,7 @@
             </div>
             <input
               type="text"
-              placeholder="Type here"
+              placeholder="código postal"
               name="zip-code"
               [(ngModel)]="zipCode"
               class="input input-bordered w-full max-w-xs"
@@ -50,7 +50,7 @@
             <input
               type="text"
               name="full-name"
-              placeholder="Type here"
+              placeholder="nombre"
               [(ngModel)]="fullName"
               class="input input-bordered w-full max-w-xs"
             />
@@ -66,7 +66,7 @@
               type="email"
               name="email"
               [(ngModel)]="email"
-              placeholder="Type here"
+              placeholder="correo"
               class="input input-bordered w-full max-w-xs"
             />
           </label>
@@ -81,7 +81,7 @@
               type="text"
               name="phone"
               [(ngModel)]="phone"
-              placeholder="Type here"
+              placeholder="teléfono"
               class="input input-bordered w-full max-w-xs"
             />
           </label>
