added contact info component

--- a/src/app/components/insurance-card/insurance-card.component.html
+++ b/src/app/components/insurance-card/insurance-card.component.html
@@ -1,6 +1,6 @@
-<div class="card glass w-96 max-h-[500px]">
+<div class="card glass w-[350px] h-[400px]">
   <figure>
-    <img [src]="image" [alt]="title" />
+    <img [src]="image" [alt]="title" width="250" />
   </figure>
   <div class="card-body">
     <h2 class="card-title">{{ title }}</h2>
