--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,26 +1,38 @@
-<div class="hero min-h-screen">
-  <div class="hero-overlay bg-opacity-60"></div>
-  <div class="hero-content text-neutral-content text-center">
-    <div class="max-w-md">
-      <h1 class="mb-5 text-5xl font-bold main-title-font-size">
-        <!-- <span class="black-font">Iserns</span> -->
-        <span>Iserns</span>
-        <span class="yellow-font"> Insurance</span>
-      </h1>
-      <p class="mb-5 subtitles-font-size">
-        {{
-          languageService.currentLanguageComputed() === "es"
-            ? heroText.slogan.es
-            : heroText.slogan.en
-        }}
-      </p>
-      <button class="btn btn-primary" [routerLink]="'/about-us'">
-        {{
-          languageService.currentLanguageComputed() === "es"
-            ? heroText.button.es
-            : heroText.button.en
-        }}
-      </button>
+<div class="hero min-h-screen w-full">
+  <div class="hero-overlay bg-opacity-65"></div>
+  <div class="w-full flex flex-col items-center justify-center flex-wrap">
+    <div class="hero-content text-neutral-content text-center mt-[13rem]">
+      <div class="max-w-md">
+        <h1 class="mb-5 text-5xl font-bold main-title-font-size">
+          <!-- <span class="black-font">Iserns</span> -->
+          <span>Iserns</span>
+          <span class="yellow-font"> Insurance</span>
+        </h1>
+        <p class="mb-5 subtitles-font-size">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? heroText.slogan.es
+              : heroText.slogan.en
+          }}
+        </p>
+        <button class="btn btn-primary" [routerLink]="'/about-us'">
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? heroText.button.es
+              : heroText.button.en
+          }}
+        </button>
+      </div>
+    </div>
+    <div class="w-full mt-[2rem] h-[400px] flex justify-center gap-[10rem]">
+      @for (text of insuranceCardsText; track $index) {
+      <app-insurance-card
+        class="w-[200px] h-[200px]"
+        [title]="text.title.es"
+        [description]="text.description.es"
+        [image]="text.image"
+      />
+      }
     </div>
   </div>
 </div>
