--- a/src/app/components/contact-info/contact-info.component.css
+++ b/src/app/components/contact-info/contact-info.component.css
@@ -1,3 +1,12 @@
-:host {
-  display: block;
+.card {
+   border-radius: 4rem;
+}
+
+.phone-text {
+   transition: .3s ease-in;
+
+   &:hover {
+      cursor: pointer;
+      color: #141515;
+   }
 }
