--- a/src/app/components/enroll-steps/enroll-steps.component.html
+++ b/src/app/components/enroll-steps/enroll-steps.component.html
@@ -1,4 +1,5 @@
-<div class="w-full flex flex-col items-center justify-center mt-[7rem]">
+<!-- *OLD -->
+<!-- <div class="w-full flex flex-col items-center justify-center mt-[7rem]">
   <h1 class="secondary-title text-primary">
     {{
       languageService.currentLanguageComputed() === "es"
@@ -52,7 +53,6 @@
           fill="currentColor"
           class="h-5 w-5 text-primary"
         >
-          <!-- [ngClass]="{ 'text-primary': currentActiveStep() >= 2 }" -->
           <path
             fill-rule="evenodd"
             d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
@@ -80,11 +80,9 @@
           alt=""
         />
       </div>
-      <!-- <hr [ngClass]="{ 'bg-primary': currentActiveStep() >= 2 }" /> -->
       <hr class="bg-primary" />
     </li>
     <li>
-      <!-- <hr [ngClass]="{ 'bg-primary': currentActiveStep() >= 2 }" /> -->
       <hr class="bg-primary" />
 
       <div class="timeline-middle">
@@ -94,7 +92,6 @@
           fill="currentColor"
           class="h-5 w-5 text-primary"
         >
-          <!-- [ngClass]="{ 'text-primary': currentActiveStep() === 3 }" -->
           <path
             fill-rule="evenodd"
             d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
@@ -122,8 +119,48 @@
         />
       </div>
       <hr class="bg-primary" />
-
-      <!-- <hr [ngClass]="{ 'bg-primary': currentActiveStep() === 3 }" /> -->
     </li>
   </ul>
+</div> -->
+<div class="w-full flex flex-col items-center mt-[7rem]">
+  <h1 class="secondary-title text-primary">
+    {{
+      languageService.currentLanguageComputed() === "es"
+        ? enrollStepsText.title.es
+        : enrollStepsText.title.en
+    }}
+  </h1>
+
+  <div
+    class="w-full flex flex-wrap justify-center items-center mt-[3rem] gap-[4rem]"
+  >
+    @for (step of enrollStepsText.steps; track $index) {
+    <!-- <div class="card w-96" [className]="'card' + $index"> -->
+    <div class="card w-96">
+      <figure>
+        <img
+          width="350px"
+          height="350px"
+          [src]="step.image"
+          [alt]="step.text.en"
+        />
+      </figure>
+      <div class="card-body">
+        <h2 class="card-title">
+          {{
+            languageService.currentLanguageComputed() === "es" ? "Paso" : "Step"
+          }}
+          {{ $index + 1 }}
+        </h2>
+        <p>
+          {{
+            languageService.currentLanguageComputed() === "es"
+              ? step.text.es
+              : step.text.en
+          }}
+        </p>
+      </div>
+    </div>
+    }
+  </div>
 </div>
